# kxdemo

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  version.txt
components/: README.md
components/bsp/: CMakeLists.txt  Kconfig  idf_component.yml
components/bsp/include/: bsp_port.hpp
components/bsp/include/bsp/: bsp_box3.hpp  bsp_dnesp32s3.hpp  bsp_kxdemo.hpp
components/bsp/src/: bsp_box3.cpp  bsp_dnesp32s3.cpp  bsp_kxdemo.cpp  bsp_port.cpp
components/fota/: CMakeLists.txt  fota.cpp
components/fota/include/: fota.hpp
components/kxbt/: CMakeLists.txt
components/kxbt/include/: kxbt.h
components/kxbt/priv_include/: kxbt_priv.h
components/kxbt/src/: blufi_init.c  blufi_security.c  kxbt.c
components/kxchat/: CMakeLists.txt  idf_component.yml
components/kxchat/include/: kxchat.hpp  kxsession.hpp
components/kxchat/include/kxchat/: kx_audio_types.hpp  kxaudio.hpp  kxopus.hpp
components/kxchat/src/: kx_audio_types.cpp  kxaudio.cpp  kxchat.cpp  kxopus.cpp  kxsession.cpp
components/kxfiles/: CMakeLists.txt  kxfiles.c
components/kxfiles/include/: kxfiles.h
components/kxmqtt/: CMakeLists.txt  kxmqtt.cpp
components/kxmqtt/include/: kxmqtt.hpp
components/kxmqtt/priv_include/: kxmqtt_priv.hpp
components/kxmqtt/src/: callback.cpp  client.cpp
components/kxutils/: CMakeLists.txt  README.md  idf_component.yml
components/kxutils/include/kxutils/: cxxjson.hpp  nvs_store.hpp  websocket.hpp
components/kxutils/src/: kxutils.cpp  nvs_store.cpp  websocket.cpp
components/netcm/: CMakeLists.txt  README.md  idf_component.yaml  index.html
components/netcm/include/: netcm.hpp
components/netcm/priv_include/: netcm_priv.hpp
components/netcm/src/: netcm.cpp  sntp.cpp  sta_scan.cpp
docs/: idf.md  opus.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: app_callbacks.hpp  blink.hpp  dto.hpp  main.hpp
main/src/: app_callbacks.cpp  blink.cpp  dto.cpp
tools/: 2g-bad.sh  2g-less.sh  2g.sh  flash.py  packbin.py
