idf_component_register(
    SRCS "kxfiles.c"
    
    INCLUDE_DIRS "include"

    EMBED_FILES "mp3/bo.mp3"
                "mp3/charge_success.mp3"
                "mp3/charging.mp3"
                "mp3/low_battery_10.mp3"
                "mp3/low_battery_20.mp3"
                "mp3/no_wifi.mp3"
                "mp3/wifi_connect_fail.mp3"
                "mp3/wifi_connect_success.mp3"
                "mp3/wifi_connecting.mp3"
                "mp3/xiu.mp3"
                "mp3/start_ota.mp3"
                "mp3/ota_success.mp3"
                "mp3/ota_fail.mp3"
)
